--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
-    <string name="app_name">Learn_Android_ACADGILD</string>
+    <string name="app_name">Credit Card Helper</string>
+    <string name="card_balance">Enter Card Balance ($)</string>
+    <string name="interest_rate">Enter Yearly Interest Rate (%)</string>
+    <string name="minimum_pay">Enter Minimum Payment ($)</string>
+    <string name="final_balance">Enter Final Card Balance ($)</string>
+    <string name="month_remain">Months Remaining</string>
+    <string name="interest_paid">Interest Paid Will Be ($)</string>
+    <string name="bt_compute">compute</string>
+    <string name="bt_clear">clear</string>
 </resources>
