HIde and Seek UI Application

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Learn_Android_ACADGILD</string>
+    <string name="hide_button">Hide</string>
+    <string name="show_button">Show</string>
 </resources>
