--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Learn_Android_ACADGILD</string>
+    <string name="app_name">Hide and Seek</string>
     <string name="hide_button">Hide</string>
     <string name="show_button">Show</string>
 </resources>
