--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Learn_Android_ACADGILD</string>
+    <string name="app_name">Call and SMS </string>
+    <string name="call">Call</string>
+    <string name="sms">SMS</string>
 </resources>
