--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Learn_Android_ACADGILD</string>
+    <string name="app_name">ContextMenu</string>
+    <string name="action1">Action 1</string>
+    <string name="action2">Action 2</string>
+    <string name="action3">Action 3</string>
+    <string name="contextTitle">Context Menu</string>
 </resources>
