--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Call and SMS </string>
     <string name="call">Call</string>
     <string name="sms">SMS</string>
+    <string name="select">Select the Action</string>
 </resources>
