Custom List App using  ListActivity and ListFragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Learn_Android_ACADGILD</string>
+    <string name="youtube">Youtube</string>
+    <string name="blogger">Blogger</string>
 </resources>
