--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Learn_Android_ACADGILD</string>
+    <string name="app_name">Android Insert Blob data in SQLite</string>
+    <string name="name">Name:</string>
+    <string name="age">Age:</string>
+    <string name="employee_photo">Employee Photo</string>
 </resources>
