--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Learn_Android_ACADGILD</string>
+    <string name="app_name">SQLite Demo</string>
+    <string name="idLabel">Id:</string>
+    <string name="first_name">First Name:</string>
+    <string name="fnameLabel">First Name:</string>
+    <string name="last_name">,Last Name:</string>
 </resources>
