--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Learn_Android_ACADGILD</string>
+    <string name="app_name">AndroidAlertDialog</string>
+    <string name="show_alert">Show Alert With two Buttons</string>
 </resources>
