--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">BlinkingEffect</string>
+    <string name="app_name">ParallelAsyncTask</string>
     <string name="fadeinText">This is Fade-in Animation</string>
     <string name="start_animation">START ANIMATION</string>
+    <string name="start_download">Start Parallel Download</string>
 </resources>
